testsuite/tests/indexed-types/should_fail/T13092/A.hs
{-# LANGUAGE TypeFamilies #-}
module A where
type family A a
